--- a/project.html
+++ b/project.html
@@ -168,7 +168,7 @@
         <div class="container">
 
         <section id="research">
-            <h2>Research Project</h2>
+            <h2>Research Projects</h2>
             <div class="item">
                 <h3>Neural Representation for Temporal Dynamics in Auditory Cortex during Gap Detection: A Population Analysis</h3>
                 <p><em>September 2024 - Present</em></p>
