--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
         .people-link {
             color: #0317cd;  /* Different color from PDF links */
             text-decoration: none;
-            margin-left: 0.5rem;
+            margin: 0;
+            padding: 0;
+            display: inline;
         }
 
         .people-link:hover {
