--- a/project.html
+++ b/project.html
@@ -141,7 +141,8 @@
         .people-link {
             color: #0317cd;  /* Different color from PDF links */
             text-decoration: none;
-            margin-left: 0.5rem;
+            padding: 0;
+            display: inline;
         }
 
         .people-link:hover {
