--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <div class="bio-name-section">
                     <div class="bio-name">Zimo Li</div>
                     <div class="contact-info">
-                        <a href="mailto:zimo.li.20@ucl.ac.com" class="contact-link">
+                        <a href="mailto:zimo.li@yale.edu" class="contact-link">
                             <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.89 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                             </svg>
@@ -260,8 +260,10 @@
             </div>
             
             <div class="bio-text">
-                I am a fourth-year MSci Neuroscience student at University College London, 
-                currently completing my master's thesis project at the Gatsby Computational Neuroscience Unit under the supervision of <a href="https://www.gatsby.ucl.ac.uk/~maneesh/" class="people-link" target="_blank">Maneesh Sahani</a>
+                I am a first-year PhD student in Yale's Interdepartmental Neuroscience Program. 
+                I graduated with an MSci in Neuroscience from University College London, 
+                where I completed my master's thesis at the Gatsby Computational Neuroscience Unit
+                under the supervision of <a href="https://www.gatsby.ucl.ac.uk/~maneesh/" class="people-link" target="_blank">Maneesh Sahani</a>
                 and <a href="https://profiles.ucl.ac.uk/5665-jennifer-linden" class="people-link" target="_blank">Jennifer Linden</a>.
                 My research interests lie at the intersection of systems, computational, and theoretical neuroscience, 
                 with a particular focus on how sensory information is represented and processed in the cortex at the population level. 
