--- a/publication.html
+++ b/publication.html
@@ -170,7 +170,14 @@
         <div class="container">
 
         <section id="publications">
-            <h2>Publications and Posters</h2>
+            <h2>Paper</h2>
+            <div class="item">
+                <p>Aeon: an open-source platform to study the neural basis of ethological behaviours over naturalistic timescales
+D. Campagner, J. Bhagat, G. Lopes, L. Calcaterra, A. G. Pouget, A. Almeida, T. T. Nguyen, C. H. Lo, T. Ryan, B. Cruz, F. J. Carvalho, Z. Li, A. Erskine, J. Rapela, O. Folsz, M. Marin, J. Ahn, S. Nierwetberg, S. C. Lenzi, J. D. S. Reggiani, SGEN group - SWC GCNU Experimental Neuroethology Group
+bioRxiv 2025.07.31.664513; doi: https://doi.org/10.1101/2025.07.31.664513</p>
+            </div>
+
+            <h2>Poster</h2>
             <div class="item">
                 <p>Bhagat, J., Campagner, D., Lopes, G., Calcaterra, L.,Almeida, A., Lo, C., Nguyen, T., Pouget, A., Ryan, T., Marin, M., Ahn, J., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Rapela, J., Reggiani, J., SWC Foraging Working Group. Aeon: an open -source platform for testing normative models of natural behaviours and their neural implementations. (2025) <em>Computational and Systems Neuroscience (COSYNE)</em>, March 27th, Montreal, QC, Canada.</p>
             </div>
@@ -181,6 +188,9 @@
                 <p>Li, Z., Rapela, J., Campagner, D., SWC Foraging Working Group, and Sahani, M. Statistical Analysis of Naturalistic Long-Duration Mice Foraging Behaviour. (2024) <em>Shenoy Undergraduate Research Fellowship in Neuroscience (SURFiN) Symposium</em>, April 15th, New York City, U.S..
                     <a href="https://drive.google.com/file/d/10LBPxjHKYmA2uRDX7DnwUl2NYRFTQmDQ/view?usp=drive_link" class="pdf-link" target="_blank">[PDF]</a> </p>
             </div>
+
+            <h2>Presentation</h2>
+
         </section>
         </div>
     </main>
