--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <div class="side-menu-vertical">
             <a class="menu-btn" href="publication.html">Publication</a>
             <a class="menu-btn" href="project.html">Project</a>
-            <a class="menu-btn" href="https://drive.google.com/file/d/1o9m9PxVb2czNB3Pk2XQHj08ePnpiFkZu/view?usp=drive_link" target="_blank">CV</a>
+            <a class="menu-btn" href="https://drive.google.com/drive/u/0/folders/1Xlskf3PJkSMDDdmPcmuY930On9tfCKEe" target="_blank">CV</a>
             <a class="menu-btn" href="others.html">Others</a>
         </div>
         
