--- a/publication.html
+++ b/publication.html
@@ -172,9 +172,9 @@
         <section id="publications">
             <h2>Paper</h2>
             <div class="item">
-                <p>Aeon: an open-source platform to study the neural basis of ethological behaviours over naturalistic timescales
-D. Campagner, J. Bhagat, G. Lopes, L. Calcaterra, A. G. Pouget, A. Almeida, T. T. Nguyen, C. H. Lo, T. Ryan, B. Cruz, F. J. Carvalho, Z. Li, A. Erskine, J. Rapela, O. Folsz, M. Marin, J. Ahn, S. Nierwetberg, S. C. Lenzi, J. D. S. Reggiani, SGEN group - SWC GCNU Experimental Neuroethology Group
-bioRxiv 2025.07.31.664513; doi: https://doi.org/10.1101/2025.07.31.664513</p>
+                <p>Aeon: an open-source platform to study the neural basis of ethological behaviours over naturalistic timescales.
+                    D. Campagner, J. Bhagat, G. Lopes, L. Calcaterra, A. G. Pouget, A. Almeida, T. T. Nguyen, C. H. Lo, T. Ryan, B. Cruz, F. J. Carvalho, Z. Li, A. Erskine, J. Rapela, O. Folsz, M. Marin, J. Ahn, S. Nierwetberg, S. C. Lenzi, J. D. S. Reggiani, SGEN group - SWC GCNU Experimental Neuroethology Group.
+                    <em>biorxiv</em>. doi: https://doi.org/10.1101/2025.07.31.664513</p>
             </div>
 
             <h2>Poster</h2>
@@ -190,6 +190,10 @@ bioRxiv 2025.07.31.664513; doi: https://doi.org/10.1101/2025.07.31.664513</p>
             </div>
 
             <h2>Presentation</h2>
+            <div class='item'>
+                <p>Li, Z., Lu, C., Sahani, M., and Linden, J.Contributions of sound offsets and onsets to auditory cortical population dynamics evoked by brief gaps in noise.
+                (2025) <em>Society for Neuroscience</em>, November 19th, San Diego, U.S..</p>
+            </div>
 
         </section>
         </div>
