--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <div class="side-menu-vertical">
             <a class="menu-btn" href="publication.html">Publication</a>
             <a class="menu-btn" href="project.html">Project</a>
-            <a class="menu-btn" href="https://drive.google.com/file/d/1jcRVjyb_SOLHNvulaY45Ephcd9eBCl-w/view" target="_blank">CV</a>
+            <a class="menu-btn" href="https://drive.google.com/file/d/1EtkrN1gej3OBi_fNIITldcqkcllkpjme/view" target="_blank">CV</a>
             <a class="menu-btn" href="others.html">Others</a>
         </div>
         
@@ -242,7 +242,7 @@
                 <div class="bio-name-section">
                     <div class="bio-name">Zimo Li</div>
                     <div class="contact-info">
-                        <a href="mailto:zimo.li@yale.edu" class="contact-link">
+                        <a href="mailto:zimoli.research@gmail.com" class="contact-link">
                             <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.89 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                             </svg>
@@ -275,7 +275,7 @@
 
         <div class="footer-text">
             <div class="footer-location">"云横秦岭家何在" （唐）韩愈</div>
-            <p class="footer-copyright">&copy; May 29th 2025</p>
+            <p class="footer-copyright">&copy; October 4th 2025</p>
         </div>
 
     </div>
