--- a/publication.html
+++ b/publication.html
@@ -159,7 +159,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="publication.html">Publication</a></li>
             <li><a href="project.html">Project</a></li>
-            <li><a href="https://drive.google.com/file/d/1jcRVjyb_SOLHNvulaY45Ephcd9eBCl-w/view">CV</a></li>
+            <li><a href="https://drive.google.com/file/d/1EtkrN1gej3OBi_fNIITldcqkcllkpjme/view">CV</a></li>
             <li><a href="others.html">Others</a></li>
         </ul>
     </nav>
@@ -177,7 +177,7 @@
                     <em>biorxiv</em>. doi: https://doi.org/10.1101/2025.07.31.664513</p>
             </div>
 
-            <h2>Poster</h2>
+            <h2>Poster Presentation</h2>
             <div class="item">
                 <p>Bhagat, J., Campagner, D., Lopes, G., Calcaterra, L.,Almeida, A., Lo, C., Nguyen, T., Pouget, A., Ryan, T., Marin, M., Ahn, J., Carvalho, F. J., Cruz, B., Erskine, A., Foslz, O., Li, Z., Rapela, J., Reggiani, J., SWC Foraging Working Group. Aeon: an open -source platform for testing normative models of natural behaviours and their neural implementations. (2025) <em>Computational and Systems Neuroscience (COSYNE)</em>, March 27th, Montreal, QC, Canada.</p>
             </div>
@@ -189,12 +189,6 @@
                     <a href="https://drive.google.com/file/d/10LBPxjHKYmA2uRDX7DnwUl2NYRFTQmDQ/view?usp=drive_link" class="pdf-link" target="_blank">[PDF]</a> </p>
             </div>
 
-            <h2>Presentation</h2>
-            <div class='item'>
-                <p>Li, Z., Lu, C., Sahani, M., and Linden, J.Contributions of sound offsets and onsets to auditory cortical population dynamics evoked by brief gaps in noise.
-                (2025) <em>Society for Neuroscience</em>, November 19th, San Diego, U.S..</p>
-            </div>
-
         </section>
         </div>
     </main>
@@ -202,7 +196,7 @@
         <img src="Images/footer.jpg" class="footer-img">
             <div class="footer-text">
             <div class="footer-location">"云横秦岭家何在" （唐）韩愈</div>
-            <p class="footer-copyright">&copy; May 29th 2025</p>
+            <p class="footer-copyright">&copy; October 4th 2025</p>
     </div>
     </footer>
 </body>
